// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: show bar 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: callARegStack
      ],
      next: [
        Node {
          seq: [
            compute: Function,
            mov: store a,
            filter: Function,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: callStackAReg
              ],
              next: [
                Node {
                  seq: [
                    compute: Function,
                    mov: store a,
                    filter: Function,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    Node {
      seq: [
        run: effect
      ],
      next: []
    }
  ]
}"
`;

exports[`graphite: show bar 2`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: callARegStack
      ],
      next: [
        Node {
          seq: [
            compute: Function,
            mov: store a,
            filter: Function,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: callStackAReg
              ],
              next: [
                Node {
                  seq: [
                    compute: Function,
                    mov: store a,
                    filter: Function,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: callStack
      ],
      next: [
        Node {
          seq: [],
          next: [
            Node {
              seq: [
                mov: store a,
                compute: callARegStack
              ],
              next: [
                Node {
                  seq: [
                    compute: Function,
                    mov: store a,
                    filter: Function,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        mov: store a,
                        compute: callStackAReg
                      ],
                      next: [
                        Node {
                          seq: [
                            compute: Function,
                            mov: store a,
                            filter: Function,
                            mov: stack store
                          ],
                          next: [
                            Node {seq: [], next: []}
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store1 1`] = `
"Node {
  seq: [
    compute: Function,
    mov: store a,
    filter: Function,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        mov: store a,
        compute: callStackAReg
      ],
      next: [
        Node {
          seq: [
            compute: Function,
            mov: store a,
            filter: Function,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []}
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store2 1`] = `
"Node {
  seq: [
    compute: Function,
    mov: store a,
    filter: Function,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []}
  ]
}"
`;

exports[`showcase: event foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: callARegStack
      ],
      next: [
        Node {
          seq: [
            compute: Function,
            mov: store a,
            filter: Function,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                compute: Function,
                mov: store a,
                mov: store b,
                filter: Function,
                mov: a store,
                mov: value store,
                mov: value store,
                mov: store stack,
                mov: store b
              ],
              next: [
                Node {
                  seq: [
                    compute: Function,
                    mov: store a,
                    filter: Function,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        mov: store a,
                        compute: callStackAReg
                      ],
                      next: [
                        Node {
                          seq: [
                            compute: Function,
                            mov: store a,
                            filter: Function,
                            mov: stack store
                          ],
                          next: [
                            Node {seq: [], next: []},
                            Node {
                              seq: [
                                run: effect
                              ],
                              next: []
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`showcase: mapped 1`] = `
"Node {
  seq: [
    compute: Function,
    mov: store a,
    filter: Function,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        run: effect
      ],
      next: []
    }
  ]
}"
`;

exports[`showcase: store a 1`] = `
"Node {
  seq: [
    compute: Function,
    mov: store a,
    filter: Function,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        compute: Function,
        mov: store a,
        mov: store b,
        filter: Function,
        mov: a store,
        mov: value store,
        mov: value store,
        mov: store stack,
        mov: store b
      ],
      next: [
        Node {
          seq: [
            compute: Function,
            mov: store a,
            filter: Function,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: callStackAReg
              ],
              next: [
                Node {
                  seq: [
                    compute: Function,
                    mov: store a,
                    filter: Function,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        run: effect
                      ],
                      next: []
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;
